--- a/frontend/gerenciamento-inventario/src/app/shared/menu-lateral/menu-lateral.component.html
+++ b/frontend/gerenciamento-inventario/src/app/shared/menu-lateral/menu-lateral.component.html
@@ -1,4 +1,4 @@
-<p-sidebar [(visible)]="barraLateralVisivel" [modal]="false" position="left" [styleClass]="'layout-sidebar'">
+<p-sidebar [(visible)]="barraLateralVisivel" [modal]="false" position="left" [styleClass]="'layout-sidebar'" closeOnEscape="false">
   <ng-template pTemplate="header">
   <div class="p-sidebar-header">
     <img src="assets/imagens/inventio.png" alt="Logo" class="app-logo">
