--- a/frontend/gerenciamento-inventario/src/app/pages/login/login.component.css
+++ b/frontend/gerenciamento-inventario/src/app/pages/login/login.component.css
@@ -1,166 +1,64 @@
-.main-container {
-  display: flex;
-  height: 100vh;
-}
-
-.content-container {
+.background {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 33%;
-  padding: 4rem;
-  background-color: #f9f9f9;
-}
-
-.logo-container {
-  text-align: center;
-  margin-bottom: 1rem;
+  height: 100vh;
+  background-color: #f3f4f6;
 }
 
 .logo {
-  height: 4rem;
-}
-
-.form-container h1 {
-  font-size: 2em;
-  font-weight: bold;
-  margin-bottom: 1rem;
-  color: #333;
-}
-
-.form-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  max-width: 300px;
-  gap: 2rem; /* Adjust gap as needed */
-}
-
-h2 {
-  font-size: 1.5em;
-  color: #555;
-  margin-bottom: 1rem;
-}
-
-form {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-input {
-  width: 100%;
-  padding: 0.75rem;
-  font-size: 1rem;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
-.p-button {
-  margin: 0;
-  display: inline-flex;
-  cursor: pointer;
-  user-select: none;
-  align-items: center;
-  vertical-align: bottom;
-  text-align: center;
-  overflow: hidden;
-  position: relative; 
-  width: 10rem; 
-}
-
-.p-button {
-  color: #ffffff;
-  background: #8BC34A;
-  border: 1px solid #8BC34A;
-  padding: 0.5rem 1rem;
-  font-size: 1rem;
-  transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
-  border-radius: 4px;
-}
-
-.p-button-label {
-  flex: 1 1 auto;
-}
-
-a {
-  margin-top: 1rem;
-  font-size: 0.9rem;
-  color: #8BC34A;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-.image-container {
-  width: 67%;
-  position: relative;
-  overflow: hidden;
-}
-
-.background-image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-
-}
-
-@media (max-width: 768px) {
-  .image-container {
-      display: none;
-  }
-
-  .content-container {
-      width: 100%;
-  }
-}
-
-.image-container div {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  color: #ffffff; 
-}
-
-.text-overlay {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-  color: #ffffff;
-  max-width: 80%;
-}
-
-.logo-texto {
-  width: 120px; 
-  margin-bottom: 5rem;
+  width: 5rem;
   height: auto;
+  margin-bottom: 1.5rem;
 }
 
-.text-overlay h1 {
-  font-size: 2em;
-  font-weight: bold;
-  margin-bottom: 2rem;
+.form-card {
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
 }
 
-.text-overlay p {
-  font-size: 1.2em;
-  line-height: 1.5;
-  margin-bottom: 1rem;
-  max-width: 600px; 
+.card {
+  padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-content > input {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1.5rem;
+  width: 100%;
+}
+
+.lembrar-login > label {
+  margin-left: 0.5rem;
+}
+
+.submit-btn {
+  display: block; 
+  width: 80%;
+  margin: 0 auto; 
+  background-color: #295255;
+  color: #fff;
+}
+
+.header-card {
+  text-align: center;
+}
+
+.options {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-top: 1rem;
+  margin-bottom: 1.5rem;
+}
+
+.lembrar-login {
+  display: flex;
+  align-items: center;
 }
