criando funcionalidade de itens produto + totalização

--- a/frontend v17/invent.io/src/app/shared/dialog/dialog.component.html
+++ b/frontend v17/invent.io/src/app/shared/dialog/dialog.component.html
@@ -2,7 +2,7 @@
   header="Adicionar novo {{ tituloFormulario }}"
   [modal]="true"
   [(visible)]="visible"
-  [style]="{ width: '28rem', minHeight: '38rem' }"
+  [style]="{ width: '28rem' }"
   (onHide)="fecharDialog()">
   <ng-template pTemplate="content">
     <ng-content></ng-content>
