--- a/frontend v17/invent.io/src/app/shared/formulario-pedido/formulario-pedido.component.scss
+++ b/frontend v17/invent.io/src/app/shared/formulario-pedido/formulario-pedido.component.scss
@@ -11,12 +11,12 @@
   width: 100%;
   max-width: 270px;
   display: block;
-  margin: 0 auto;
+  margin: 2rem auto;
 }
 
 .linha-total-data .field {
   display: inline-block;
-  width: 48%; 
+  width: 49%; 
   margin-right: 2%; 
 }
 
