--- a/frontend v17/invent.io/src/app/pages/pedido/pedido.component.html
+++ b/frontend v17/invent.io/src/app/pages/pedido/pedido.component.html
@@ -10,17 +10,14 @@
       <div class="flex justify-content-between align-items-center gap-2">
         <div class="flex gap-2">
           <p-button label="Limpar" [outlined]="true" icon="pi pi-filter-slash" class="botao-icone" (onClick)="limpar(dt1)" />
-          <p-button label="Adicionar Pedido" icon="pi pi-plus" (onClick)="abrirDialog()" class="botao-adicionar botao-icone" />
+          <p-button label="Adicionar pedido" icon="pi pi-plus" (onClick)="abrirDialog()" class="botao-adicionar botao-icone" />
         </div>
       </div>
     </ng-template>
     <ng-template pTemplate="header">
       <tr>
         <th pSortableColumn="id"> ID <p-sortIcon field="id" /></th>
-        <th pSortableColumn="data" style="min-width:10rem">
-          Data
-          <p-columnFilter type="data" field="data" display="menu" />
-        </th>
+        <th pSortableColumn="data" style="min-width:10rem">Data <p-sortIcon field="data" /></th>
         <th pSortableColumn="status" style="min-width:10rem">
           Status
           <p-columnFilter type="text" field="status" display="menu" />
@@ -36,7 +33,7 @@
     <ng-template pTemplate="body" let-pedido>
       <tr>
         <td>{{ pedido.id }}</td>
-        <td>{{ pedido.data }}</td>
+        <td>{{ pedido.data | date : 'dd/MM/yyyy'}}</td>
         <td>{{ pedido.status }}</td>
         <td>{{ pedido.total }}</td>
         <td>{{ pedido.cliente?.nome }}</td>
@@ -71,3 +68,5 @@
 <app-dialog [(visible)]="dialogVisible" tituloFormulario="pedido">
   <app-formulario-pedido (salvar)="salvarPedido($event)" [pedido]="pedidoSelecionado"></app-formulario-pedido>
 </app-dialog>
+
+<p-toast></p-toast>
