--- a/frontend v17/invent.io/src/app/shared/dialog/dialog.component.html
+++ b/frontend v17/invent.io/src/app/shared/dialog/dialog.component.html
@@ -1,5 +1,5 @@
 <p-dialog 
-  header="Adicionar novo {{ tituloFormulario }}"
+  header="Adicionar {{ tituloFormulario }}"
   [modal]="true"
   [(visible)]="visible"
   [style]="{ width: '28rem' }"
