--- a/frontend v17/invent.io/src/app/shared/menu-superior/menu-superior.component.html
+++ b/frontend v17/invent.io/src/app/shared/menu-superior/menu-superior.component.html
@@ -3,8 +3,11 @@
     <h2 style="font-size: 1.5rem; margin: 0;">{{ nomePagina }}</h2>    
   </div>
   <div class="p-toolbar-group-end">
-    <i class="pi pi-search" style="font-size: 1.5rem; margin-left: 1rem;"></i>  
-    <i class="pi pi-bell" style="font-size: 1.5rem; margin-left: 1rem;"></i>  
-    <i class="pi pi-user" label="Usuário" style="font-size: 1.5rem; margin-left: 1rem;"></i>  
+    <p-button 
+    icon="pi pi-sign-out" 
+    label="Logout" 
+    styleClass="p-button-danger" 
+    (onClick)="desconectar()">
+  </p-button>
   </div>
 </p-toolbar>
