Criando tela de histórico de pedidos e ajustando espaçamentos

--- a/frontend v17/invent.io/src/app/pages/fornecedor/fornecedor.component.html
+++ b/frontend v17/invent.io/src/app/pages/fornecedor/fornecedor.component.html
@@ -45,7 +45,7 @@
         <td>
           <p-button
             icon="pi pi-pencil"
-            class="mr-2"
+            class="mr-2 gap-2"
             [rounded]="true"
             [outlined]="true"
             severity="success"
