--- a/frontend v17/invent.io/src/app/pages/clientes/clientes.component.html
+++ b/frontend v17/invent.io/src/app/pages/clientes/clientes.component.html
@@ -50,7 +50,7 @@
         <td>
           <p-button
             icon="pi pi-pencil"
-            class="mr-2"
+            class="mr-2 gap-2"
             [rounded]="true"
             [outlined]="true"
             severity="success"
